--- a/index.html
+++ b/index.html
@@ -126,21 +126,18 @@
     </div>
     <!-- Image Slider End -->
 
-    <!-- Parallax Section Start -->
-    <div class="parallax-section" data-stellar-background-ratio="0.5" style="background-image: url('images/img_2.jpg'); min-height: 300px; background-attachment: fixed; background-size: cover; background-position: center; display: flex; align-items: center; justify-content: center;">
-      <div style="background: rgba(0,0,0,0.4); padding: 40px 20px; border-radius: 8px; text-align: center;">
-        <h2 style="color: #fff; font-size: 2.5rem; margin-bottom: 12px;">Experience the Parallax Effect</h2>
-        <p style="color: #fff; font-size: 1.2rem;">Scroll down to see the background move at a different speed than the foreground content.</p>
-      </div>
-    </div>
-    <!-- Parallax Section End -->
     <div class="slider-spacer" style="height: 32px; width: 100%;"></div>
-    <div class="container text-center mb-4">
-      <h1 class="display-4" style="color: #d32f2f; margin-bottom: 18px;">The Vedic Wedding</h1>
-      <p class="lead" style="max-width: 600px; margin: 0 auto; color: #444;">
-        Capturing timeless moments, traditions, and emotions. Explore our gallery of fashion, food, products, pre-wedding, wedding, and baby photography.
-      </p>
+    <!-- Parallax H1 Section Start -->
+    <div class="parallax-h1-section" data-stellar-background-ratio="0.5" style="background-image: url('images/img_4.jpg'); min-height: 320px; background-attachment: fixed; background-size: cover; background-position: center; display: flex; align-items: center; justify-content: center; position: relative;">
+      <div style="background: rgba(211,47,47,0.65); padding: 48px 32px; border-radius: 18px; text-align: center; box-shadow: 0 8px 32px rgba(0,0,0,0.18); max-width: 700px; width: 100%;">
+        <h1 class="display-4" style="color: #fff; font-family: 'Josefin Sans', Arial, sans-serif; font-size: 3rem; margin-bottom: 18px; letter-spacing: 0.04em; text-shadow: 0 2px 12px rgba(0,0,0,0.18);">The Vedic Wedding</h1>
+        <p class="lead" style="max-width: 600px; margin: 0 auto; color: #fff; font-size: 1.25rem; font-weight: 400; text-shadow: 0 1px 8px rgba(0,0,0,0.12);">
+          Capturing timeless moments, traditions, and emotions.<br>Explore our gallery of fashion, food, products, pre-wedding, wedding, and baby photography.
+        </p>
+      </div>
+      <div style="position: absolute; bottom: 18px; right: 32px; color: #fff; opacity: 0.7; font-size: 1rem; font-family: 'Roboto Mono', monospace;">Scroll for more ↓</div>
     </div>
+    <!-- Parallax H1 Section End -->
 
 
 
