--- a/index.html
+++ b/index.html
@@ -144,8 +144,7 @@
 
     <div class="container-fluid">
       <div class="row">
-        <div class="col-lg-4">
-
+        <div class="col-lg-4 gallery-parallax" data-stellar-background-ratio="0.3" style="background:rgba(211,47,47,0.08);">
           <div class="image-wrap-2">
             <div class="image-info">
               <h2 class="mb-3" style="color:#fff;">Fashion</h2>
@@ -153,9 +152,8 @@
             </div>
             <img src="images/img_1.jpg" alt="Image" class="img-fluid">
           </div>
-
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-4 gallery-parallax" data-stellar-background-ratio="0.3" style="background:rgba(211,47,47,0.08);">
           <div class="image-wrap-2">
             <div class="image-info">
               <h2 class="mb-3" style="color:#fff;">Food</h2>
@@ -164,7 +162,7 @@
             <img src="images/img_2.jpg" alt="Image" class="img-fluid">
           </div>
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-4 gallery-parallax" data-stellar-background-ratio="0.3" style="background:rgba(211,47,47,0.08);">
           <div class="image-wrap-2">
             <div class="image-info">
               <h2 class="mb-3" style="color:#fff;">Product</h2>
@@ -173,8 +171,7 @@
             <img src="images/img_3.jpg" alt="Image" class="img-fluid">
           </div>
         </div>
-
-        <div class="col-lg-4">
+        <div class="col-lg-4 gallery-parallax" data-stellar-background-ratio="0.3" style="background:rgba(211,47,47,0.08);">
           <div class="image-wrap-2">
             <div class="image-info">
               <h2 class="mb-3" style="color:#fff;">Pre Wedding</h2>
@@ -183,8 +180,7 @@
             <img src="images/img_4.jpg" alt="Image" class="img-fluid">
           </div>
         </div>
-
-        <div class="col-lg-4">
+        <div class="col-lg-4 gallery-parallax" data-stellar-background-ratio="0.3" style="background:rgba(211,47,47,0.08);">
           <div class="image-wrap-2">
             <div class="image-info">
               <h2 class="mb-3" style="color:#fff;">Wedding</h2>
@@ -193,8 +189,7 @@
             <img src="images/img_5.jpg" alt="Image" class="img-fluid">
           </div>
         </div>
-
-        <div class="col-lg-4">
+        <div class="col-lg-4 gallery-parallax" data-stellar-background-ratio="0.3" style="background:rgba(211,47,47,0.08);">
           <div class="image-wrap-2">
             <div class="image-info">
               <h2 class="mb-3" style="color:#fff;">Baby</h2>
