--- a/index.html
+++ b/index.html
@@ -168,14 +168,14 @@
     <!-- Image Slider End -->
 
     <div class="slider-spacer" style="height: 32px; width: 100%;"></div>
-    <!-- Split Section Start -->
-    <div class="container-fluid split-section" style="max-width: 100vw; margin: 0 auto; padding: 0;">
-      <div class="row no-gutters align-items-center" style="display: flex; min-height: 320px;">
-        <div class="col-md-6 d-flex justify-content-center align-items-center" style="background: rgba(211,47,47,0.07); min-height: 320px;">
-          <div class="split-text-content" style="padding: 32px 24px; text-align: left; max-width: 480px;">
-            <h2 style="color: #d32f2f; font-family: 'Josefin Sans', Arial, sans-serif; font-size: 2.1rem; font-weight: 700; margin-bottom: 18px;">Why Choose The Vedic Wedding?</h2>
-            <p style="font-size: 1.15rem; color: #222; margin-bottom: 18px;">We blend tradition, creativity, and emotion to capture your most precious moments. Our team specializes in fashion, food, product, pre-wedding, wedding, and baby photography, ensuring every story is told beautifully.</p>
-            <ul style="font-size: 1.08rem; color: #444; padding-left: 18px;">
+    <!-- Strip Section Start -->
+    <div class="strip-section" style="width: 100vw; background: #f8f6f3; margin: 0; padding: 0;">
+      <div class="strip-inner" style="display: flex; flex-wrap: wrap; align-items: stretch; min-height: 260px; max-width: 1400px; margin: 0 auto;">
+        <div class="strip-text" style="flex: 1 1 320px; min-width: 260px; display: flex; align-items: center; justify-content: center; background: rgba(211,47,47,0.07); padding: 32px 24px;">
+          <div style="max-width: 480px; width: 100%;">
+            <h2 style="color: #d32f2f; font-family: 'Josefin Sans', Arial, sans-serif; font-size: 2rem; font-weight: 700; margin-bottom: 16px;">Why Choose The Vedic Wedding?</h2>
+            <p style="font-size: 1.08rem; color: #222; margin-bottom: 16px;">We blend tradition, creativity, and emotion to capture your most precious moments. Our team specializes in fashion, food, product, pre-wedding, wedding, and baby photography, ensuring every story is told beautifully.</p>
+            <ul style="font-size: 1rem; color: #444; padding-left: 18px; margin-bottom: 0;">
               <li>Experienced photographers</li>
               <li>Modern and traditional styles</li>
               <li>Personalized approach</li>
@@ -183,23 +183,12 @@
             </ul>
           </div>
         </div>
-        <div class="col-md-6 d-flex justify-content-center align-items-center" style="background: #fff; min-height: 320px;">
-          <img src="images/img_1.jpg" alt="Gallery Sample" style="max-width: 90%; max-height: 280px; border-radius: 18px; box-shadow: 0 4px 24px rgba(0,0,0,0.10); object-fit: cover;">
+        <div class="strip-image" style="flex: 1 1 320px; min-width: 260px; display: flex; align-items: center; justify-content: center; background: #fff; padding: 32px 0;">
+          <img src="images/img_1.jpg" alt="Gallery Sample" style="width: 90%; max-width: 420px; max-height: 240px; border-radius: 16px; box-shadow: 0 4px 24px rgba(0,0,0,0.10); object-fit: cover;">
         </div>
       </div>
     </div>
-    <!-- Split Section End -->
-    <!-- Parallax H1 Section Start -->
-    <div class="parallax-h1-section" data-stellar-background-ratio="0.5" style="background-image: url('images/img_4.jpg'); min-height: 320px; background-attachment: fixed; background-size: cover; background-position: center; display: flex; align-items: center; justify-content: center; position: relative;">
-      <div style="background: rgba(211,47,47,0.65); padding: 48px 32px; border-radius: 18px; text-align: center; box-shadow: 0 8px 32px rgba(0,0,0,0.18); max-width: 700px; width: 100%;">
-        <h1 class="display-4" style="color: #fff; font-family: 'Josefin Sans', Arial, sans-serif; font-size: 3rem; margin-bottom: 18px; letter-spacing: 0.04em; text-shadow: 0 2px 12px rgba(0,0,0,0.18);">The Vedic Wedding</h1>
-        <p class="lead" style="max-width: 600px; margin: 0 auto; color: #fff; font-size: 1.25rem; font-weight: 400; text-shadow: 0 1px 8px rgba(0,0,0,0.12);">
-          Capturing timeless moments, traditions, and emotions.<br>Explore our gallery of fashion, food, products, pre-wedding, wedding, and baby photography.
-        </p>
-      </div>
-      <div style="position: absolute; bottom: 18px; right: 32px; color: #fff; opacity: 0.7; font-size: 1rem; font-family: 'Roboto Mono', monospace;">Scroll for more ↓</div>
-    </div>
-    <!-- Parallax H1 Section End -->
+    <!-- Strip Section End -->
 
 
 
