--- a/index.html
+++ b/index.html
@@ -158,78 +158,109 @@
 
 
   <style>
-    /* Custom Strip Section Styles */
-    .custom-strip-section {
+    /* Strip 2: Split Text & Image Section Styles */
+    .strip-2 {
       width: 100vw;
-      background: #f8f6f3;
+      background: #fff;
       margin: 0;
       padding: 0;
       display: flex;
-      align-items: stretch;
-      justify-content: center;
-      min-height: 100vh;
-      position: relative;
-      z-index: 1;
-    }
-    .custom-strip-inner {
-      width: 100vw;
-      max-width: 100vw;
-      margin: 0 auto;
-      padding: 0;
-      display: flex;
-      align-items: stretch;
-      justify-content: center;
-      height: 100vh;
-    }
-    .custom-strip-slideshow {
-      width: 100vw;
-      height: 100vh;
-      max-width: 100vw;
-      margin: 0 auto;
-      display: flex;
-      align-items: stretch;
-      justify-content: center;
-    }
-    .custom-slide {
-      display: flex !important;
       align-items: center;
       justify-content: center;
-      height: 100vh;
-      width: 100vw;
-      background: #fff;
-      border-radius: 0;
-      box-shadow: none;
-      overflow: hidden;
+      min-height: 480px;
+      position: relative;
+      z-index: 1;
+      opacity: 0;
+      transform: translateY(80px) scaleY(0.95);
+      transition: opacity 0.7s cubic-bezier(.23,1,.32,1), transform 0.7s cubic-bezier(.23,1,.32,1);
     }
-    .custom-slide img {
+    .strip-2.grow-in {
+      opacity: 1;
+      transform: translateY(0) scaleY(1);
+    }
+    .strip-2-inner {
       width: 100vw;
-      height: 100vh;
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 64px 0;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+    .strip-2-content {
+      display: flex;
+      width: 100%;
+      align-items: center;
+      justify-content: space-between;
+    }
+    .strip-2-left {
+      flex: 1 1 0;
+      padding-right: 48px;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: center;
+    }
+    .strip-2-title {
+      font-family: 'Playfair Display', serif;
+      font-size: 2.8rem;
+      font-weight: 700;
+      color: #bfa76a;
+      margin-bottom: 18px;
+      letter-spacing: 0.01em;
+    }
+    .strip-2-desc {
+      font-size: 1.18rem;
+      color: #222;
+      line-height: 1.7;
+      margin-bottom: 0;
+      font-family: 'Montserrat', Arial, sans-serif;
+    }
+    .strip-2-right {
+      flex: 1 1 0;
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
+    }
+    .strip-2-img {
+      max-width: 420px;
+      width: 100%;
+      border-radius: 18px;
+      box-shadow: 0 8px 32px rgba(0,0,0,0.10);
       object-fit: cover;
-      border-radius: 0;
       display: block;
     }
     @media (max-width: 991.98px) {
-      .custom-strip-section {
-        min-height: unset;
+      .strip-2-inner {
+        flex-direction: column;
+        padding: 32px 0;
+        padding-left: 18px;
+        padding-right: 18px;
       }
-      .custom-strip-inner {
-        padding: 12px 0;
-        height: auto;
+      .strip-2-content {
+        flex-direction: column;
+        align-items: flex-start;
       }
-      .custom-strip-slideshow {
-        width: 98vw;
+      .strip-2-left {
+        padding-right: 0;
+        margin-bottom: 18px;
+        align-items: flex-start;
+        text-align: left;
+      }
+      .strip-2-title {
+        font-size: 2rem;
+        margin-bottom: 12px;
+      }
+      .strip-2-desc {
+        font-size: 1rem;
+      }
+      .strip-2-right {
+        justify-content: flex-start;
+        width: 100%;
+      }
+      .strip-2-img {
         max-width: 98vw;
-        height: 220px;
-      }
-      .custom-slide {
-        height: 220px;
-        width: 98vw;
-        border-radius: 10px;
-      }
-      .custom-slide img {
-        border-radius: 10px;
-        height: 220px;
-        width: 98vw;
+        border-radius: 12px;
       }
     }
     .site-footer-custom.redesigned-footer {
