--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
       </div>
     </header>
     <!-- Strip 1: Fullscreen Slideshow -->
-    <section class="strip-1" data-stellar-background-ratio="0.5" style="background-image: url('images/parallax_bg.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat;">
+    <!-- Tip: Use a visually distinct, high-resolution image for best parallax effect -->
+    <section class="strip-1" data-stellar-background-ratio="0.5" style="background-image: url('images/parallax_bg.jpg'), linear-gradient(135deg, #e0c3fc 0%, #8ec5fc 100%); background-size: cover; background-position: center; background-repeat: no-repeat;">
       <div class="strip-1-inner">
         <div class="strip-1-slideshow owl-carousel">
           <div class="strip-1-slide"><img src="images/img_1.jpg" alt="Gallery Image 1"></div>
@@ -492,8 +493,8 @@
     });
   </script>
   <script>
-    // Initialize Stellar.js for parallax effect
-    $(function(){
+    // Initialize Stellar.js for parallax effect after window load for best results
+    $(window).on('load', function(){
       if(typeof $.stellar === 'function') {
         $.stellar({
           horizontalScrolling: false,
